--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;1,300&display=swap');
+
 body {
  text-align: center;
  background-color: #EDF4F8;
+ font-family: Nunito, sans-serif;
 }
 
 header {
@@ -17,7 +20,7 @@ header h1 span {
 }
 
 #cards {
-  height: 40vh;
+  height: 60vh;
 }
 
 section {
@@ -32,8 +35,62 @@ section {
 }
 
 .mochi-board {
-  max-width: 100%;
-  height: auto;
+  width: 100%;
+  height: 60vh;
   display: block;
-  padding-bottom: 5vh;
+  /* padding-bottom: 5vh; */
 }
+
+.container {
+  overflow-y: scroll;
+  height: 100vh;
+  scroll-snap-type: mandatory;
+  scroll-snap-points-y: repeat(100vh);
+  scroll-snap-type: y mandatory;
+}
+
+.section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  scroll-snap-align: start;
+  position: relative;
+}
+
+#board-container {
+  /* position: absolute; */
+  width: 100%px;
+  height: 60vh;
+}
+
+.board-container::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  color: #FFF;
+}
+
+.board-overlay {
+  height: 60vh;
+  width: 100%;
+  background-color: cyan;
+  z-index: 99;
+  position: absolute;
+  opacity: 0.1;
+}
+
+/* .board-overlay::after {
+  content: "";
+  height: 50%;
+  width: 60vh;
+  background-color: DeepSkyBlue;
+  z-index: 99;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  top: auto;
+} */
