--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,13 @@ body {
 }
 
 .App {
-  overflow-y: scroll;
   height: 100vh;
-  scroll-snap-type: mandatory;
-  scroll-snap-points-y: repeat(100vh);
   scroll-snap-type: y mandatory;
+  display: block;
+  justify-content: center;
+  align-items: center;
+  scroll-snap-align: start;
+  position: relative;
 }
 
 header {
@@ -19,27 +21,25 @@ header {
   margin-bottom: 5vh;
 }
 
-header h1 {
-  font-size: 2rem;
+header h2 {
+  font-size: 1.7rem;
   font-weight: 300;
 }
 
-header h1 span {
+header h2 span {
   color: orange;
 }
 
-#cards {
-  height: 60vh;
-}
-
 section {
-  height: 100vh;
-  /* width: 100vw; */
-  /* scroll-snap-type: y mandatory; */
+  min-height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+  padding-bottom: 5vh;
+
+  scroll-snap-type: y mandatory;
   display: block;
   justify-content: center;
   align-items: center;
-  height: 100vh;
   scroll-snap-align: start;
   position: relative;
 }
@@ -48,30 +48,24 @@ section {
   width: 13vw;
   height: 13vw;
   margin: 60px;
+  /* position: absolute; */
 }
 
 .mochi-board {
   width: 100%;
   height: 60vh;
   display: block;
-  /* padding-bottom: 5vh; */
-}
-
-.container {
-  overflow-y: scroll;
-  height: 100vh;
-  /* scroll-snap-type: mandatory;
-  scroll-snap-points-y: repeat(100vh);
-  scroll-snap-type: y mandatory; */
+  /* position: absolute; */
 }
 
 .section {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
   scroll-snap-align: start;
   position: relative;
+  padding-top: 5vh;
+  padding-bottom: 5vh;
 }
 
 #board-container {
@@ -111,8 +105,20 @@ section {
   top: auto;
 } */
 
-#mochi-bear-header {
+#mochi-bear h2 { 
   color: white;
+  font-size: 1.7rem;
+  font-weight: 300;
+  padding-top: 5vh;
+  padding-bottom: 5vh;
+  margin-left: 10vw;
+  margin-right: 10vw;
+}
+
+#mochi-bear h4 {
+  color: white;
+  font-size: 1.2rem;
+  font-weight: 300;
   padding-top: 5vh;
   padding-bottom: 5vh;
   margin-left: 5vw;
@@ -123,13 +129,11 @@ section {
   background-color: #42648A;
 }
 
-#mochi-bear img {
-  height: 100%;
-  max-width: 100vm;
-  overflow-x: hidden;
-  background-color: #42648A;
-}
+/* #mochi-on-tracks {
+  
+} */
 
 #mochi-stars {
-  width: 100%;
+  overflow: hidden;
+  width: 70vw;
 }
